# Halo_demo

./: README.md  pyproject.toml
halo/: parser.py  util.py
halo/components/: __init__.py  exe_info.py  model_config.py  operator.py  query.py
halo/optimizers/: __init__.py  halo_t.py  halo_v.py
halo/schedulers/: __init__.py  by_levels.py  colocate_parents.py  dp.py  heuristic_t.py  heuristic_v.py  rr.py  search.py
halo/serve/: ramp_load.py  send_load.py  server.py
halo/workers/: __init__.py  worker_t.py  worker_v.py
scripts/: batch_inference.py
templates/: adv_reason_3.yaml  adv_reason_4m.yaml  multi_step_retrival.yaml  multi_turn.yaml  multi_voting_4.yaml  multi_voting_4m.yaml  multi_voting_5m.yaml
