[project]
name = "halo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "agentscope==0.1.6",
    "datasets>=4.0.0",
    "langgraph==0.6.0",
    "lmcache==0.3.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pynvml>=12.0.0",
    "transformers==4.53.0",
    "vllm==0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
